[gd_scene load_steps=18 format=3 uid="uid://c85wfs03rh6dc"]

[ext_resource type="Script" path="res://UI/MainMenu.gd" id="1_7qn0h"]
[ext_resource type="Script" path="res://UI/VolumeSlider.gd" id="2_sydsq"]
[ext_resource type="Script" path="res://UI/KeybindInput.gd" id="3_ka7iy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uyk6s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j24xc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r3h5l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jq8qx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xfnly"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jcb2t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dtbr3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vl82s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d8as3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sv650"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8wyxy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7yt1y"]

[sub_resource type="GDScript" id="GDScript_8e4mg"]
resource_name = "SelectIcon"
script/source = "extends ItemList

var CurSelected : int = 0

func _ready():
	ForceSelect(0)

func ForceSelect(Index : int):
	ItemSelected(Index)
	select(Index)
	for i in item_count:
		set_item_tooltip_enabled(i, false)

func ItemSelected(Index):
	set_item_icon(CurSelected, null)
	set_item_icon(Index, preload(\"res://Textures/UIIcons/UIArrowRight.png\"))
	CurSelected = Index
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_83ea4"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7qn0h")
MenuColour1 = Color(0, 0.431373, 0.321569, 1)
MenuColour2 = Color(1, 0.690196, 0, 1)
MenuColour3 = Color(0.776471, 0.533333, 0, 1)
MenuColour4 = Color(1, 0.815686, 0.545098, 1)

[node name="Main" type="VBoxContainer" parent="Menu"]
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Menu/Main"]
offset_top = 22.0
offset_right = 140.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 15
text = "Pip Boy"
horizontal_alignment = 1

[node name="Play" type="Button" parent="Menu/Main"]
offset_top = 41.0
offset_right = 140.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Play"

[node name="Settings" type="Button" parent="Menu/Main"]
offset_top = 69.0
offset_right = 140.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Settings"

[node name="Exit" type="Button" parent="Menu/Main"]
offset_top = 97.0
offset_right = 140.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Exit"

[node name="MapPause" type="VBoxContainer" parent="Menu"]
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Menu/MapPause"]
offset_top = 22.0
offset_right = 140.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 15
text = "Pause"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Menu/MapPause"]
offset_top = 41.0
offset_right = 140.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Resume"

[node name="Settings" type="Button" parent="Menu/MapPause"]
offset_top = 69.0
offset_right = 140.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Settings"

[node name="MainMenu" type="Button" parent="Menu/MapPause"]
offset_top = 97.0
offset_right = 140.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Main Menu"

[node name="LevelPause" type="VBoxContainer" parent="Menu"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Menu/LevelPause"]
offset_top = 22.0
offset_right = 140.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 15
text = "Pause"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Menu/LevelPause"]
offset_top = 41.0
offset_right = 140.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Resume"

[node name="Settings" type="Button" parent="Menu/LevelPause"]
offset_top = 69.0
offset_right = 140.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Settings"

[node name="MainMenu" type="Button" parent="Menu/LevelPause"]
offset_top = 97.0
offset_right = 140.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Exit Level"

[node name="SaveConfirm" type="VBoxContainer" parent="Menu"]
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Menu/SaveConfirm"]
offset_top = 36.0
offset_right = 140.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 15
text = "Save?"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Menu/SaveConfirm"]
offset_top = 55.0
offset_right = 140.0
offset_bottom = 79.0
alignment = 1

[node name="Yes" type="Button" parent="Menu/SaveConfirm/HBox"]
offset_left = 32.0
offset_right = 72.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Yes"

[node name="No" type="Button" parent="Menu/SaveConfirm/HBox"]
offset_left = 76.0
offset_right = 108.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "No"

[node name="Back" type="Button" parent="Menu/SaveConfirm"]
offset_top = 83.0
offset_right = 48.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 8
text = "Back
"
flat = true

[node name="Settings" type="VBoxContainer" parent="Menu"]
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sections" type="HBoxContainer" parent="Menu/Settings"]
offset_right = 144.0
offset_bottom = 7.0
alignment = 1

[node name="Audio" type="Button" parent="Menu/Settings/Sections"]
unique_name_in_owner = true
offset_left = 8.0
offset_right = 43.0
offset_bottom = 7.0
theme_override_font_sizes/font_size = 7
theme_override_styles/normal = SubResource("StyleBoxEmpty_uyk6s")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j24xc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r3h5l")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jq8qx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xfnly")
toggle_mode = true
text = "Audio"
flat = true

[node name="Video" type="Button" parent="Menu/Settings/Sections"]
unique_name_in_owner = true
offset_left = 47.0
offset_right = 82.0
offset_bottom = 7.0
theme_override_font_sizes/font_size = 7
theme_override_styles/normal = SubResource("StyleBoxEmpty_uyk6s")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jcb2t")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dtbr3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vl82s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d8as3")
toggle_mode = true
button_pressed = true
text = "Video"
flat = true

[node name="Control" type="Button" parent="Menu/Settings/Sections"]
unique_name_in_owner = true
offset_left = 86.0
offset_right = 135.0
offset_bottom = 7.0
theme_override_font_sizes/font_size = 7
theme_override_styles/normal = SubResource("StyleBoxEmpty_uyk6s")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j24xc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r3h5l")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sv650")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8wyxy")
toggle_mode = true
text = "Control"
flat = true

[node name="HSep" type="HSeparator" parent="Menu/Settings"]
offset_top = 11.0
offset_right = 144.0
offset_bottom = 15.0

[node name="VideoSection" type="VBoxContainer" parent="Menu/Settings"]
unique_name_in_owner = true
visible = false
offset_top = 19.0
offset_right = 144.0
offset_bottom = 117.0
size_flags_vertical = 3

[node name="ColorMode" type="ItemList" parent="Menu/Settings/VideoSection"]
unique_name_in_owner = true
offset_right = 144.0
offset_bottom = 27.0
theme_override_constants/v_separation = 1
theme_override_constants/icon_margin = -2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7yt1y")
auto_height = true
item_count = 3
item_0/text = "Original"
item_1/text = "Light"
item_2/text = "Color"
script = SubResource("GDScript_8e4mg")

[node name="HSep2" type="HSeparator" parent="Menu/Settings/VideoSection"]
offset_top = 31.0
offset_right = 144.0
offset_bottom = 35.0

[node name="FullScreen" type="CheckButton" parent="Menu/Settings/VideoSection"]
unique_name_in_owner = true
offset_top = 39.0
offset_right = 144.0
offset_bottom = 47.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_83ea4")
text = "FullScreen"
flat = true

[node name="VSync" type="CheckButton" parent="Menu/Settings/VideoSection"]
unique_name_in_owner = true
offset_top = 51.0
offset_right = 144.0
offset_bottom = 59.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_83ea4")
text = "V-Sync"
flat = true

[node name="ReduceEffects" type="CheckButton" parent="Menu/Settings/VideoSection"]
unique_name_in_owner = true
offset_top = 63.0
offset_right = 144.0
offset_bottom = 71.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_83ea4")
text = "Reduce Effects"
flat = true

[node name="AudioSection" type="VBoxContainer" parent="Menu/Settings"]
unique_name_in_owner = true
visible = false
offset_top = 19.0
offset_right = 144.0
offset_bottom = 128.0
size_flags_vertical = 3

[node name="MasterLabel" type="Label" parent="Menu/Settings/AudioSection"]
offset_right = 144.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 8
text = "Master - 100%"

[node name="MasterSlider" type="HSlider" parent="Menu/Settings/AudioSection"]
offset_top = 12.0
offset_right = 144.0
offset_bottom = 20.0
step = 5.0
value = 100.0
tick_count = 9
ticks_on_borders = true
script = ExtResource("2_sydsq")
Bus = "Master"
LabelPath = NodePath("../MasterLabel")

[node name="MusicLabel" type="Label" parent="Menu/Settings/AudioSection"]
offset_top = 24.0
offset_right = 144.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 8
text = "Music - 100%"

[node name="MusicSlider" type="HSlider" parent="Menu/Settings/AudioSection"]
offset_top = 36.0
offset_right = 144.0
offset_bottom = 44.0
step = 5.0
value = 100.0
tick_count = 9
ticks_on_borders = true
script = ExtResource("2_sydsq")
Bus = "Music"
LabelPath = NodePath("../MusicLabel")

[node name="SFXLabel" type="Label" parent="Menu/Settings/AudioSection"]
offset_top = 48.0
offset_right = 144.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 8
text = "SFX - 100%"

[node name="SFXSlider" type="HSlider" parent="Menu/Settings/AudioSection"]
offset_top = 60.0
offset_right = 144.0
offset_bottom = 68.0
step = 5.0
value = 100.0
tick_count = 9
ticks_on_borders = true
script = ExtResource("2_sydsq")
Bus = "SFX"
LabelPath = NodePath("../SFXLabel")

[node name="ControlSection" type="VBoxContainer" parent="Menu/Settings"]
unique_name_in_owner = true
offset_top = 19.0
offset_right = 144.0
offset_bottom = 95.0
size_flags_vertical = 3

[node name="UpLabel" type="Label" parent="Menu/Settings/ControlSection"]
offset_right = 144.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 8
text = "Up"

[node name="Input" type="Label" parent="Menu/Settings/ControlSection/UpLabel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_font_sizes/font_size = 8
text = "\"W\""
horizontal_alignment = 2
script = ExtResource("3_ka7iy")
InitialKey = "W"
ActionName = "Up"

[node name="DownLabel" type="Label" parent="Menu/Settings/ControlSection"]
offset_top = 12.0
offset_right = 144.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Down"

[node name="Input" type="Label" parent="Menu/Settings/ControlSection/DownLabel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_font_sizes/font_size = 8
text = "\"S\""
horizontal_alignment = 2
script = ExtResource("3_ka7iy")
InitialKey = "S"
ActionName = "Down"

[node name="LeftLabel" type="Label" parent="Menu/Settings/ControlSection"]
offset_top = 24.0
offset_right = 144.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 8
text = "Left"

[node name="Input" type="Label" parent="Menu/Settings/ControlSection/LeftLabel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_font_sizes/font_size = 8
text = "\"A\""
horizontal_alignment = 2
script = ExtResource("3_ka7iy")
InitialKey = "A"
ActionName = "Left"

[node name="RightLabel" type="Label" parent="Menu/Settings/ControlSection"]
offset_top = 36.0
offset_right = 144.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 8
text = "Right"

[node name="Input" type="Label" parent="Menu/Settings/ControlSection/RightLabel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_font_sizes/font_size = 8
text = "\"D\""
horizontal_alignment = 2
script = ExtResource("3_ka7iy")
InitialKey = "D"
ActionName = "Right"

[node name="HSeparator" type="HSeparator" parent="Menu/Settings/ControlSection"]
offset_top = 48.0
offset_right = 144.0
offset_bottom = 52.0

[node name="ALabel" type="Label" parent="Menu/Settings/ControlSection"]
offset_top = 56.0
offset_right = 144.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 8
text = "A"

[node name="Input" type="Label" parent="Menu/Settings/ControlSection/ALabel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_font_sizes/font_size = 8
text = "\"Space\""
horizontal_alignment = 2
script = ExtResource("3_ka7iy")
InitialKey = "Space"
ActionName = "A"

[node name="BLabel" type="Label" parent="Menu/Settings/ControlSection"]
offset_top = 68.0
offset_right = 144.0
offset_bottom = 76.0
theme_override_font_sizes/font_size = 8
text = "B"

[node name="Input" type="Label" parent="Menu/Settings/ControlSection/BLabel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_font_sizes/font_size = 8
text = "\"Shift\""
horizontal_alignment = 2
script = ExtResource("3_ka7iy")
InitialKey = "Shift"
ActionName = "B"

[node name="HSep2" type="HSeparator" parent="Menu/Settings"]
offset_top = 99.0
offset_right = 144.0
offset_bottom = 103.0

[node name="BackButton" type="Button" parent="Menu/Settings"]
offset_top = 106.743
offset_right = 48.0
offset_bottom = 131.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 8
text = "Back"
flat = true

[node name="SaveFileSelect" type="VBoxContainer" parent="Menu"]
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Menu/SaveFileSelect"]
offset_top = 1.0
offset_right = 140.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 15
text = "Select
Save File"
horizontal_alignment = 1

[node name="File1" type="Button" parent="Menu/SaveFileSelect"]
unique_name_in_owner = true
offset_top = 35.0
offset_right = 140.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Empty"

[node name="File2" type="Button" parent="Menu/SaveFileSelect"]
unique_name_in_owner = true
offset_top = 63.0
offset_right = 140.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Empty"

[node name="File3" type="Button" parent="Menu/SaveFileSelect"]
unique_name_in_owner = true
offset_top = 91.0
offset_right = 140.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Empty
"

[node name="Back" type="Button" parent="Menu/SaveFileSelect"]
offset_top = 119.0
offset_right = 48.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 8
text = "Back
"
flat = true

[node name="SaveFileOptions" type="VBoxContainer" parent="Menu"]
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Menu/SaveFileOptions"]
offset_top = 22.0
offset_right = 140.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 15
text = "File Info"
horizontal_alignment = 1

[node name="Play" type="Button" parent="Menu/SaveFileOptions"]
offset_top = 41.0
offset_right = 140.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Play"

[node name="Erase" type="Button" parent="Menu/SaveFileOptions"]
offset_top = 69.0
offset_right = 140.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Erase"

[node name="Back" type="Button" parent="Menu/SaveFileOptions"]
offset_top = 97.0
offset_right = 48.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 8
text = "Back
"
flat = true

[connection signal="pressed" from="Menu/Main/Play" to="Menu" method="Play"]
[connection signal="pressed" from="Menu/Main/Settings" to="Menu" method="OpenSettings"]
[connection signal="pressed" from="Menu/Main/Exit" to="Menu" method="Exit"]
[connection signal="pressed" from="Menu/MapPause/Resume" to="Menu" method="Resume"]
[connection signal="pressed" from="Menu/MapPause/Settings" to="Menu" method="OpenSettings"]
[connection signal="pressed" from="Menu/MapPause/MainMenu" to="Menu" method="MainMenu"]
[connection signal="pressed" from="Menu/LevelPause/Resume" to="Menu" method="Resume"]
[connection signal="pressed" from="Menu/LevelPause/Settings" to="Menu" method="OpenSettings"]
[connection signal="pressed" from="Menu/LevelPause/MainMenu" to="Menu" method="MainMenu"]
[connection signal="pressed" from="Menu/SaveConfirm/HBox/Yes" to="Menu" method="SaveConfirm" binds= [true]]
[connection signal="pressed" from="Menu/SaveConfirm/HBox/No" to="Menu" method="SaveConfirm" binds= [false]]
[connection signal="pressed" from="Menu/SaveConfirm/Back" to="Menu" method="Back"]
[connection signal="pressed" from="Menu/Settings/Sections/Audio" to="Menu" method="SettingsSection" binds= [0]]
[connection signal="pressed" from="Menu/Settings/Sections/Video" to="Menu" method="SettingsSection" binds= [1]]
[connection signal="pressed" from="Menu/Settings/Sections/Control" to="Menu" method="SettingsSection" binds= [2]]
[connection signal="item_activated" from="Menu/Settings/VideoSection/ColorMode" to="Menu" method="SetColorMode"]
[connection signal="item_activated" from="Menu/Settings/VideoSection/ColorMode" to="Menu/Settings/VideoSection/ColorMode" method="ItemSelected"]
[connection signal="toggled" from="Menu/Settings/VideoSection/FullScreen" to="Menu" method="SetFullscreen"]
[connection signal="toggled" from="Menu/Settings/VideoSection/VSync" to="Menu" method="SetVSync"]
[connection signal="toggled" from="Menu/Settings/VideoSection/ReduceEffects" to="Menu" method="SetReduceEffects"]
[connection signal="pressed" from="Menu/Settings/BackButton" to="Menu" method="Back"]
[connection signal="pressed" from="Menu/SaveFileSelect/File1" to="Menu" method="SaveFileSelect" binds= [1]]
[connection signal="pressed" from="Menu/SaveFileSelect/File2" to="Menu" method="SaveFileSelect" binds= [2]]
[connection signal="pressed" from="Menu/SaveFileSelect/File3" to="Menu" method="SaveFileSelect" binds= [3]]
[connection signal="pressed" from="Menu/SaveFileSelect/Back" to="Menu" method="Back"]
[connection signal="pressed" from="Menu/SaveFileOptions/Play" to="Menu" method="PlaySave"]
[connection signal="pressed" from="Menu/SaveFileOptions/Erase" to="Menu" method="EraseSave"]
[connection signal="pressed" from="Menu/SaveFileOptions/Back" to="Menu" method="Back"]
